Fix overlapping text for COOP policy in frame details
Increasing the min-width is just a bandaid. This CL is related to
https://crrev.com/c/2431507. To properly fix the overall behaviour one
would have to take a closer look at the ReportView's css and maybe
remove one of the two nested containers which cause the two scrollbars
in the linked CL.

Before: https://i.imgur.com/qKiYDEW.png
After: https://i.imgur.com/gqaSu35.png

Bug: chromium:1093247

--- a/front_end/resources/frameDetailsReportView.css
+++ b/front_end/resources/frameDetailsReportView.css
@@ -50,7 +50,7 @@
 }
 
 .frame-details-report-container {
-  min-width: 500px;
+  min-width: 550px;
 }
 
 .text-ellipsis {
